force-app/main/default/objects/YouTube_Video__c/YouTube_Video__c.object-meta.xml
<CustomObject>
    <description>Store Youtube Data</description>
    <label>YouTube Video</label>
    <nameField>
        <label>YouTube Video</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>YouTube Videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>