force-app/main/default/objects/YouTube_Video__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Video_Id__c</columns>
    <columns>Title__c</columns>
    <columns>Channel_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Published_Date__c</columns>
    <columns>Thumbnail_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>